Committing before power outage

--- a/src/display_sweep.ipynb
+++ b/src/display_sweep.ipynb
@@ -26,11 +26,28 @@
      "text": [
       "Successfully opened ../config/SyntheticAES__num_leaking_points_sweep.json\n",
       "Successfully opened ../config/SyntheticAES__trace_length_sweep.json\n",
+      "Successfully opened ../config/Full_ASCADv1__initial_trial.json\n",
+      "Successfully opened ../config/AES_HD__adv.json\n",
+      "Successfully opened ../config/ASCADv1__adv.json\n",
+      "Successfully opened ../config/GoogleTinyAES__adv.json\n",
+      "Successfully opened ../config/SyntheticAES__both_orders.json\n",
+      "Successfully opened ../config/ASCADv1__default.json\n",
+      "Successfully opened ../config/ASCADv1__masure_reproduction.json\n",
+      "Successfully opened ../config/ASCADv1__initial_trial.json\n",
+      "Successfully opened ../config/AES_HD__baseline.json\n",
       "Successfully opened ../config/SyntheticAES__initial_trial.json\n",
+      "Successfully opened ../config/DPAv4__adv.json\n",
+      "Successfully opened ../config/AES_RD__initial_trial.json\n",
+      "Successfully opened ../config/GoogleTinyAES__baseline.json\n",
       "Successfully opened ../config/SyntheticAES__dataset_size_sweep.json\n",
+      "Successfully opened ../config/SyntheticAES__both_orders_hsweep.json\n",
+      "Successfully opened ../config/ASCADv1__hsweep.json\n",
       "Successfully opened ../config/SyntheticAES__default.json\n",
+      "Successfully opened ../config/DPAv4__baseline.json\n",
+      "Successfully opened ../config/SyntheticAES__2nd_order.json\n",
       "Successfully opened ../config/SyntheticAES__delay_sweep.json\n",
-      "Successfully opened ../config/SyntheticAES__noise_sweep.json\n"
+      "Successfully opened ../config/SyntheticAES__noise_sweep.json\n",
+      "Successfully opened ../config/AES_RD__default.json\n"
      ]
     }
    ],
